--- a/contactus.html
+++ b/contactus.html
@@ -32,14 +32,124 @@
   <meta property="og:site_name" content="هافركامب">
   <meta name="theme-color" content="#00345c">
   <link rel="canonical" href="https://www.haverkampkw.com/">
+  <!-- Schema.org JSON-LD -->
 
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "LocalBusiness",
+          "@id": "https://haverkampkw.com/#business",
+          "name": "هافركامب الكويت",
+          "url": "https://haverkampkw.com/",
+          "logo": "https://haverkampkw.com/img/main_page/haverkamp.webp",
+          "image": "https://haverkampkw.com/img/contact/cover.jpeg",
+          "description":
+           "هافركامب افضل شركة حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش",
+          "telephone": "+965651111154",
+          "priceRange": "$$",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "الري - قطعة 3- شارع 19",
+            "addressLocality": "الكويت",
+            "postalCode": "00000",
+            "addressCountry": "KW"
+          },
+          "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 29.307435053926305,
+            "longitude": 47.939898967502984
+          },
+          "openingHoursSpecification": [
+            {
+              "@type": "OpeningHoursSpecification",
+              "dayOfWeek": [
+                "Saturday",
+                "Sunday",
+                "Monday",
+                "Tuesday",
+                "Wednesday",
+                "Thursday"
+              ],
+              "opens": "10:00",
+              "closes": "20:00"
+            }
+          ],
+          "sameAs": [
+            "https://www.instagram.com/haverkampkw",
+            "https://maps.app.goo.gl/3bcseGdCETquaemU8"
+          ],
+          "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "خدمات هافركامب الكويت",
+            "itemListElement": [
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "حماية سيارات",
+                  "url": "https://haverkampkw.com/protication.html",
+                  "description": "افضل حماية سيارات بالكويت | حماية فل بدي كفالة 10 سنوات بأسعار تبدأ من 400 دينار."
+                }
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "حماية بدي ألمانية",
+                  "url": "https://haverkampkw.com/haverkamp.html",
+                  "description": "حماية ألمانية سماكة 9.5 ميكروميلي مع كفالة 10 سنوات."
+                }
+              },
+               {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "حماية بدي ألمانية",
+                  "url": "https://haverkampkw.com/clif.html",
+                  "description": "حماية كورية سماكة 9.5 ميكروميلي مع كفالة 10 سنوات."
+                }
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "حماية بدي ألمانية",
+                  "url": "https://haverkampkw.com/iron.html",
+                  "description": "حماية امريكية سماكة 9.5 ميكروميلي مع كفالة 10 سنوات."
+                }
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "عازل حراري",
+                  "url": "https://haverkampkw.com/tint.html",
+                  "description": "عازل حراري ألماني يحجب الحرارة والأشعة فوق البنفسجية بنسبة تتجاوز 90%."
+                }
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "بوليش وتلميع احترافي",
+                  "url": "https://haverkampkw.com/polish.html",
+                  "description": "خدمة بوليش احترافية لإزالة الخدوش وتجديد لمعان الطلاء باستخدام أدوات ألمانية عالية الجودة."
+                }
+              }
+            ]
+          }
+        }
+      ]
+    }
+    </script>
   <!-- favicon -->
   <link rel="shortcut icon" href="./image/favicon_io/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="192x192" href="./img/favicon_io/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="./img/favicon_io/android-chrome-512x512.png">
   <link rel="apple-touch-icon" href="./img/favicon_io/apple-touch-icon.png">
-  <link rel="manifest" href="./site.webmanifest">
   <!-- font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
