--- a/index.html
+++ b/index.html
@@ -104,6 +104,24 @@
                   "description": "حماية ألمانية سماكة 9.5 ميكروميلي مع كفالة 10 سنوات."
                 }
               },
+               {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "حماية بدي ألمانية",
+                  "url": "https://haverkampkw.com/clif.html",
+                  "description": "حماية كورية سماكة 9.5 ميكروميلي مع كفالة 10 سنوات."
+                }
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "حماية بدي ألمانية",
+                  "url": "https://haverkampkw.com/iron.html",
+                  "description": "حماية امريكية سماكة 9.5 ميكروميلي مع كفالة 10 سنوات."
+                }
+              },
               {
                 "@type": "Offer",
                 "itemOffered": {
@@ -118,17 +136,8 @@
                 "itemOffered": {
                   "@type": "Service",
                   "name": "بوليش وتلميع احترافي",
-                  "url": "https://haverkampkw.com/",
+                  "url": "https://haverkampkw.com/polish.html",
                   "description": "خدمة بوليش احترافية لإزالة الخدوش وتجديد لمعان الطلاء باستخدام أدوات ألمانية عالية الجودة."
-                }
-              },
-              {
-                "@type": "Offer",
-                "itemOffered": {
-                  "@type": "Service",
-                  "name": "نانو للمقاعد والداخلية",
-                  "url": "https://haverkampkw.com/",
-                  "description": "نانو سيراميك خاص للمقاعد الداخلية يمنع امتصاص السوائل ويحافظ على نظافة الجلد والأقمشة لفترة أطول."
                 }
               }
             ]
