--- a/polish.html
+++ b/polish.html
@@ -5,28 +5,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- seo -->
-  <title>haverkamp | هافركامب</title>
-  <meta name=”robots” content="index, follow">
-  <meta name="description" content="افضل واقوي حماية وعازل حراري بالكويت ، منتج الماني 
- ">
+  <title>هافركامب | بوليش وتلميع خارجي </title>
+  <meta name="robots" content="index, follow">
+  <meta name="msvalidate.01" content="6198358A4D794604238ACB9F4AEF9BFA" />
+  <meta name="description"
+    content="  هافركامب بوليش وتلميع خارجي مواد المانية - اقوي بوليش في الكويت - افضل بوليش في الكويت " />
   <meta name="author" content="Ahmad M-Nofal">
   <!-- Open Graph -->
-  <meta property="og:title" content="haverkamp | هافركامب" />
-  <meta property="og:description"
-    content="الوكيل الحصري لحمايات هافركامب الالمانية في الشرق الاوسط وحمايات كلايف ديزاين الكورية في الخليج" />
-  <meta property="og:image" content="https://example.com/image.jpg" />
-  <meta property="og:url" content="https://haverkampkw.com" />
+  <!-- Open Graph -->
   <meta property="og:type" content="website" />
+  <meta property="og:locale" content="ar_AR">
+  <meta property="og:title"
+    content="  هافركامب بوليش وتلميع خارجي مواد المانية - اقوي بوليش في الكويت - افضل بوليش في الكويت  " />
+  <meta property="og:description"
+    content="  هافركامب بوليش وتلميع خارجي مواد المانية - اقوي بوليش في الكويت - افضل بوليش في الكويت " />
+  <meta property="og:image" content="https://haverkampkw.com/img/contact/cover.jpeg" />
+  <meta property="og:url" content="https://haverkampkw.com" />
+  <meta property="og:site_name" content="هافركامب">
+  <meta name="theme-color" content="#00345c">
+  <link rel="canonical" href="https://www.haverkampkw.com/paint.html">
 
-
+  <!-- Schema.org JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "serviceType": "خدمة البوليش",
+    "provider": {
+      "@type": "LocalBusiness",
+      "name": "هافركامب الكويت",
+      "image": "https://haverkampkw.com/img/contact/cover.jpeg",
+      "telephone": "+965651111154",
+      "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "الري - قطعة 3- شارع 19",
+              "addressLocality": "الكويت",
+              "addressCountry": "KW"
+       }
+    },
+    "description": "خدمة البوليش للسيارات من شركة هافركامب باستخدام مواد المانية عالية الجودة",
+    "url": "https://haverkampkw.com/tint.html"
+  }
+  </script>
   <!-- favicon -->
-
   <link rel="shortcut icon" href="./img/favicon_io/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="192x192" href="./img/favicon_io/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href=".//img/favicon_io/android-chrome-512x512.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="./img/favicon_io/android-chrome-512x512.png">
   <link rel="apple-touch-icon" href="./img/favicon_io/apple-touch-icon.png">
-  <link rel="manifest" href="./site.webmanifest">
   <!-- font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,13 +74,12 @@
   <!-- start header -->
   <header class="header">
     <a href="#">
-      <img class="logo" alt="albaraka logo" src="./img/main_page/logo.svg" />
+      <img class="logo" alt="هافركامب افضل بوليش في الكويت" src="./img/main_page/logo.svg" />
     </a>
 
     <nav class="main-nav">
       <ul class="main-nav-list">
-        <li><a class="main-nav-link" href="#specifications"> الخصائص</a></li>
-        <li><a class="main-nav-link" href="#pricing"> الباقات</a></li>
+        <li><a class="main-nav-link" href="#specifications"> خطوات العمل</a></li>
         <li><a class="main-nav-link" href="#gallery"> معرض الصور</a></li>
         <li><a class="main-nav-link" href="#testimonials"> اراءالعملاء</a></li>
         <li><a class="main-nav-link" href="./terms.html"> البنود والشروط</a></li>
@@ -73,10 +98,11 @@
   <main>
     <section class="section-hero" id="section-hero">
       <div class="protication">
-        <img src="./img/haverkamp/haverkamp-landing.webp" alt="protication">
+        <img src=".//img/polish/main.png" alt="افضل خدمة بوليش وتلميع خارجي من شركة هافركامب">
         <div class="container">
           <div class="protication-text">
-            <h1>هافركامب اقوي حماية المانية بالكويت مع سماكة تصل الي 9.5 ميكرميلي </h1>
+            <h1> بوليش وتلميع احترافي يعيد سيارتك كأنها جديدة مع خدمة البوليش من هافركامب
+            </h1>
           </div>
         </div>
       </div>
@@ -85,132 +111,69 @@
     <!-- start specifications -->
     <div class="specifications" id="specifications">
       <div class="center-text">
-        <h2 class="heading-secondary">خصائص الحماية</h2>
+        <h2 class="heading-secondary"> مراحل البوليش</h2>
       </div>
       <div class="container">
+
         <div class="box">
-          <div class="img"><img src="./img/haverkamp/ppf-heat.png" alt=""></div>
+          <div class="img"><img src="./img/polish/wash.png" alt="خدمة غسيل السيارة لفحص البوليش من هافركامب"></div>
           <div class="box-text">
-            <h3>المعالجة الذاتية</h3>
+            <h3> الغسيل والتنظيف </h3>
             <p>
-              المعالجة الذاتية تعمل على اعادة طبقة الحماية الى حالتها الاصلية
-              عند تعرضها لحرارة مثل الشمس او مجفف الشعر
+              غسيل كامل السيارة لازالة الاتربة تمهيدا لمرحلة فح السيارة في الخطوة التالية
             </p>
           </div>
         </div>
         <div class="box">
-          <div class="img"><img src="./img/haverkamp/ppf-shi.png" alt=""></div>
+          <div class="img"><img src="./img/polish/check.png" alt="فحص السيارة في شركه هافركامب لعمل البوليش"></div>
           <div class="box-text">
-            <h3>لمعة اضافية</h3>
+            <h3> فحص السيارة</h3>
             <p>
-              احصل على لعمة اضافية تصل الى 70% اضافية على لعمة السيارة بعد
-              التركيب
+              يتم تقييم حالة الطلاء بدقة وتحديد نوع الخدوش ودرجة بهتان اللون، ثم اختيار طريقة التلميع المناسبة
+          </div>
+        </div>
+        <div class="box">
+          <div class="img"><img src="./img/polish/polish.png" alt="افضل خدمة بوليش بالكويت شركه هافركامب"></div>
+          <div class="box-text">
+            <h3> البوليش</h3>
+            <p>
+              استخدام مركبات بوليش قوية لمعالجة الخدوش السطحية والعلامات الدائرية واستعادة الطبقة الشفافة
             </p>
           </div>
         </div>
         <div class="box">
-          <div class="img"><img src="./img/haverkamp/ppf-nano.png" alt=""></div>
+          <div class="img"><img src="./img/polish/check-2.png" alt="فحص السيارة بعد البوليش من شركة هافركامب "></div>
           <div class="box-text">
-            <h3>تقنية النانو سيراميك</h3>
+            <h3>الفحص مرة اخري </h3>
             <p>
-              مدمجة مع الحماية حيث تعمل على اضافة حماية اضافية لطبقة الحماية
-              تعمل على مقاومة الاصفرار
-            </p>
+              مراجعة السيارة تحت إضاءة خاصة للتأكد من جودة اللمعة وخلو السطح من أي آثار </p>
           </div>
         </div>
       </div>
     </div>
     <!-- end specifications -->
-    <!-- start tint number -->
-    <div class="tint-number" id="tint-number">
+    <section class="section-why-us" id="why-us">
       <div class="center-text">
+        <span class="subheading"> </span>
         <h2 class="heading-secondary">
-          تعرف على باقات الحماية المتوفرة لدين</h2>
-      </div>
-      <div class="tint-number-container">
-        <div class="container">
-          <div class="flip">
-            <div class="front" style="background-image: url(./img/haverkamp/ppf-silver.png)"></div>
-            <div class="back">
-              <h2>الباقة الفضية</h2>
-            </div>
-          </div>
-          <div class="flip">
-            <div class="front" style="background-image: url(./img/haverkamp/ppf-goald.png)"></div>
-            <div class="back">
-              <h2>الباقة الذهبية</h2>
-            </div>
-          </div>
-          <div class="flip">
-            <div class="front" style="background-image: url(./img/haverkamp/ppf-platinum.png)"></div>
-            <div class="back">
-              <h2>الباقة البلاتينية</h2>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- end tint number -->
-    <!-- Start Pricing -->
-    <div class="pricing" id="pricing">
-      <div class="dots dots-up"></div>
-      <div class="dots dots-down"></div>
-      <div class="center-text">
-        <h2 class="heading-secondary">
-          الاسعار</h2>
+          لماذا تختار هافركامب </h2>
       </div>
       <div class="container">
-        <div class="box popular">
-          <div class="label">الاكثر مبيعا</div>
-          <div class="title">بلاتينية</div>
-          <div class="price">
-            <span class="amount">580 K.D</span>
-            <span class="time">السعر متغير حسب نوع السيارة</span>
-          </div>
-          <ul>
-            <li>حماية بدى كامل</li>
-            <li>عازل حراري شامل جميع زجاج السيارة</li>
-            <li>حماية الجام الامامي</li>
-            <li>عمل نانو للمقاعد</li>
-            <li>عمل نانو للرنجات</li>
-            <li>تلبيس دواسات</li>
-            <li>تعقيم عدد 2 سيارة</li>
-            <li>خدمة الونش متوفرة لمرة واحدة</li>
-          </ul>
-        </div>
-        <div class="box">
-          <div class="title">ذهبية</div>
-          <div class="price">
-            <span class="amount">320 K.D</span>
-            <span class="time">السعر متغير حسب نوع السيارة</span>
-          </div>
-          <ul>
-            <li>حماية كبوت كامل</li>
-            <li>عازل حراري شامل جميع زجاج السيارة</li>
-            <li>حماية الجام الامامي</li>
-            <li>عمل نانو للمقاعد</li>
-            <li>عمل نانو للرنجات</li>
-            <li>تعقيم عدد 2 سيارة</li>
-          </ul>
-        </div>
-        <div class="box">
-          <div class="title">فضية</div>
-          <div class="price">
-            <span class="amount">230 K.D</span>
-            <span class="time">السعر متغير حسب نوع السيارة</span>
-          </div>
-          <ul>
-            <li>حماية نص كبوت</li>
-            <li>عازل حراري شامل جميع زجاج السيارة</li>
-            <li>حماية الجام الامامي</li>
-            <li>عمل نانو للمقاعد</li>
-            <li>عمل نانو للرنجات</li>
-            <li>تعقيم عدد 2 سيارة</li>
-          </ul>
-        </div>
+        <div class="img"><img src="./img/main_page/haverkamp.png" alt=""></div>
+        <ul class="about-list">
+          <li><i class="fa-solid fa-fill-drip"></i> جودة بوليش فائقة باستخدام مواد المانية معتمدة</li>
+          <li>
+            <i class="fa-solid fa-screwdriver-wrench"></i>إصلاح احترافي للخدوش
+          </li>
+          <li>
+            <i class="fa-solid fa-award"></i></i> فنيون مدربون علي اعلي مستوي
+          </li>
+          <li> <i class="fa-solid fa-circle-info"></i> نهتم بادق التفاصيل</li>
+
+        </ul>
       </div>
-    </div>
-    <!-- End Pricing -->
+    </section>
+    <!-- end why us section -->
     <!-- start gallery -->
     <section class="gallery" id="gallery">
       <div class="center-text">
@@ -220,22 +183,26 @@
       <div class="carosel">
         <div class=" list">
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-1.png" alt="football">
+            <img src="./img/gallery/polish/polish-1.png" alt="افضل خدمة بوليش بالكويت من شركة هافركامب">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-2.png" alt=" handball ">
+            <img src="./img/gallery/polish/polish-2.png" alt=" اقوي خدمة بوليش بالكويت من شركة هافركامب ">
           </div>
           <div class="item">
-            <img src="../img/gallery/main/ppf-gal-3.png" alt="basketball">
+            <img src="../img/gallery/polish/polish-3.png"
+              alt="خدمة بوليش بالكويت من شركة هافركامب باستخدام مواد المانية">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-4.png" alt="volleyball">
+            <img src="./img/gallery/polish/polish-4.png"
+              alt="افضل خدمة بوليش بالكويت من شركه هافركامب باستخدام مواد المانية">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-5.png" alt="tennis">
+            <img src="./img/gallery/polish/polish-5.png"
+              alt="اقوي خدمة بوليش بالكويت من شركه هافركامب باستخدام مواد المانية">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-6.png" alt="swimming">
+            <img src="./img/gallery/polish/polish-6.png"
+              alt=" خدمة بوليش بالكويت من شركه هافركامب باستخدام مواد المانية">
           </div>
 
         </div>
@@ -416,41 +383,26 @@
                   <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      <span class="accordian-numbers">01</span> ما هو سمك الحماية
+                      <span class="accordian-numbers">01</span> ما هي المواد المستخدمة في البوليش
                     </button>
                   </h2>
                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      سمك الحماية 9 ميكروميلى
-                    </div>
+                      نستخدم منزيرنا و سوناكس مواد المانية </div>
                   </div>
                 </div>
                 <div class="accordion-item mb-4">
                   <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      <span class="accordian-numbers">02</span> مدة الكفالة
+                      <span class="accordian-numbers">02</span> كم يوم تحتاج االسيارة
                     </button>
                   </h2>
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      10 سنوات علي عيوب التركيب
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item mb-4">
-                  <h2 class="accordion-header" id="headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      <span class="accordian-numbers">03</span> طريقة التركيب
-                    </button>
-                  </h2>
-                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                      قص احترافي وقطع كاملة بدون وصلات وتركيب داخلي
+                      من يوم الي يومين حسب درجة تضرر بدي السيارة
                     </div>
                   </div>
                 </div>
@@ -512,20 +464,24 @@
             <p class="cta-text">
               نقدم لكم أفضل حماية للسيارات باستخدام أحدث التقنيات والمواد عالية الجودة</p>
 
-            <form class="cta-form" name="sign-up" netlify>
+            <form class="cta-form" name="sign-up" action="https://formsubmit.co/ef7d656274c363dc9eb3ce5c5ff03525"
+              method="post">
+              <input type="hidden" name="_captcha" value="false">
               <div>
                 <label for="full-name">الاسم بالكامل </label>
-                <input id="full-name" type="text" placeholder=" من فضلك اكتب اسمك" name="full-name" required />
+                <input id="full-name" type="text" placeholder=" من فضلك اكتب اسمك" name="full-name" required
+                  autocomplete="given-name" />
               </div>
 
               <div>
                 <label for="email">البريد الالكتروني </label>
-                <input id="email" type="email" placeholder="من فضلك ادخل بريدك الالكتروني" name="email" required />
+                <input id="email" type="email" placeholder="من فضلك ادخل بريدك الالكتروني" name="email" required
+                  autocomplete="off" />
               </div>
 
               <div>
-                <label for="select-where">اترك رسالتك</label>
-                <textarea name="message" id="message" placeholder="اترك رسالتك هنا "></textarea>
+                <label for="message">اترك رسالتك</label>
+                <textarea name="message" id="message" placeholder="اترك رسالتك هنا " autocomplete="off"></textarea>
                 </select>
               </div>
 
