--- a/paint.html
+++ b/paint.html
@@ -28,42 +28,22 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "AutoBodyShop",
-    "name": "هافركامب | صبغ سيارات - اصلاح دعمات",
-    "image": "https://haverkampkw.com/img/main_page/haverkamp.webp",
-    "@id": "https://www.haverkampkw.com/paint.html",
-    "url": "https://www.haverkampkw.com/paint.html",
-    "telephone": "+96551111154",
-    "priceRange": "$$",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "الري - الكويت",
-      "addressLocality": "الري",
-      "addressCountry": "KW"
+    "@type": "Service",
+    "serviceType": "صبغ سيارات",
+    "provider": {
+      "@type": "LocalBusiness",
+      "name": "هافركامب الكويت",
+      "image": "https://haverkampkw.com/img/contact/cover.jpeg",
+      "telephone": "+965651111154",
+      "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "الري - قطعة 3- شارع 19",
+              "addressLocality": "الكويت",
+              "addressCountry": "KW"
+       }
     },
-    "geo": {
-      "@type": "GeoCoordinates",
-      "latitude": 29.307543490093664,
-      "longitude": 47.939721442284906
-    },
-    "openingHoursSpecification": [{
-      "@type": "OpeningHoursSpecification",
-      "dayOfWeek": ["Saturday","Sunday","Monday","Tuesday","Wednesday","Thursday"],
-      "opens": "09:00",
-      "closes": "21:00"
-    }],
-    "description": "هافركامب |صبغ سيارات - اصلاح خدوش - اصلاح دعمات - احدث تقنيات لتركيب الالوان - رد علي البارد بدون صبغ ",
-    "areaServed": {
-      "@type": "Place",
-      "name": "الكويت"
-    },
-    "brand": {
-      "@type": "Brand",
-      "name": "هافركامب"
-    },
-    "sameAs": [
-      "https://www.instagram.com/haverkampkw",
-    ]
+    "description": "خدمة الصبغ من شركة هافركامب باستخدام مواد عالية الجودة",
+    "url": "https://haverkampkw.com/paint.html"
   }
   </script>
   <!-- favicon -->
@@ -72,7 +52,6 @@
   <link rel="icon" type="image/png" sizes="192x192" href="./img/favicon_io/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="./img/favicon_io/android-chrome-512x512.png">
   <link rel="apple-touch-icon" href="./img/favicon_io/apple-touch-icon.png">
-  <link rel="manifest" href="./site.webmanifest">
   <!-- font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -498,25 +477,29 @@
       <div class="container">
         <div class="cta">
           <div class="cta-text-box">
-            <h2 class="heading-secondary">احمي سيارتك الان
+            <h2 class="heading-secondary">اصبغ سيارتك الان
             </h2>
             <p class="cta-text">
-              نقدم لكم أفضل حماية للسيارات باستخدام أحدث التقنيات والمواد عالية الجودة</p>
+              نقدم لكم أفضل صبغ للسيارات باستخدام أحدث التقنيات والمواد عالية الجودة</p>
 
-            <form class="cta-form" name="sign-up" netlify>
+            <form class="cta-form" name="sign-up" action="https://formsubmit.co/ef7d656274c363dc9eb3ce5c5ff03525"
+              method="post">
+              <input type="hidden" name="_captcha" value="false">
               <div>
                 <label for="full-name">الاسم بالكامل </label>
-                <input id="full-name" type="text" placeholder=" من فضلك اكتب اسمك" name="full-name" required />
+                <input id="full-name" type="text" placeholder=" من فضلك اكتب اسمك" name="full-name" required
+                  autocomplete="given-name" />
               </div>
 
               <div>
                 <label for="email">البريد الالكتروني </label>
-                <input id="email" type="email" placeholder="من فضلك ادخل بريدك الالكتروني" name="email" required />
+                <input id="email" type="email" placeholder="من فضلك ادخل بريدك الالكتروني" name="email" required
+                  autocomplete="off" />
               </div>
 
               <div>
-                <label for="select-where">اترك رسالتك</label>
-                <textarea name="message" id="message" placeholder="اترك رسالتك هنا "></textarea>
+                <label for="message">اترك رسالتك</label>
+                <textarea name="message" id="message" placeholder="اترك رسالتك هنا " autocomplete="off"></textarea>
                 </select>
               </div>
 
